# mass_spring

./: dev_log  readme
src/: CMakeLists.txt  cloth.cc  cloth.h  config.h  gui.cc  gui.h  helper_functions.cc  helper_functions.h  main.cc  mass_spring.cc  mass_spring.h  render_pass.cc  render_pass.h
src/shaders/: bend_spring.frag  bend_spring.vert  cloth.frag  cloth.geom  cloth.vert  floor.frag  sphere.frag  sphere.vert  spring.frag
